--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     /> -->
-    <title>React App</title>
+    <title>Price-cart-bootstrap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
